<resources>
    <string name="app_name">TaxiGo</string>
    <string name="default_web_client_id">995235431492-3u18lt3b0q5oruhg3t6bve39bqbc.apps.googleusercontent.com</string>
    <string name="facebook_app_id">676065915197005</string>
    <string name="facebook_client_token">29a6b4baaba0f6a260ec14d65ca0cff3</string>


    <string name="welcome_text">Добредојдовте на TaxiGo</string>
    <string name="login_button">Најави се</string>
    <string name="register_button">Регистрирај се</string>
    <string name="anonymous_button">Продолжи како гостин</string>
    <string name="logo_description">Лого на TaxiGo</string>

    <string name="login_title">Најави се</string>
    <string name="email_hint">Емаил</string>
    <string name="password_hint">Лозинка</string>
    <string name="login_button_text">Најави се</string>

    <string name="google_sign_in_text">Најава со Google</string>
    <string name="google_logo_description">Лого од Google</string>

    <string name="facebook_sign_in_text">Најава со Facebook</string>
    <string name="facebook_logo_description">Лого од Facebook</string>

    <string name="go_to_register_text">Немаш профил? Регистрирај се</string>

    <string name="enter_email_password">Внесете е-пошта и лозинка</string>
    <string name="login_successful">Успешна најава</string>
    <string name="login_failed">Неуспешна најава</string>

    <string name="register_title">Регистрација</string>
    <string name="confirm_password_hint">Потврди лозинка</string>
    <string name="go_to_login">Веќе имаш кориснички профил? Најави се</string>
    <string name="fill_all_fields">Пополнете ги сите полиња</string>
    <string name="passwords_do_not_match">Лозинките не се совпаѓаат</string>
    <string name="registration_successful">Успешна регистрација</string>
    <string name="registration_failed">Регистрацијата не успеа: %1$s</string>

    <string name="fake_map_description">Симулирана мапа</string>
    <string name="vehicle_icon_description">Икона на возило</string>
    <string name="available_vehicles">Достапни возила</string>
    <string name="order_button">Нарaчај</string>

    <string name="select_location">Избери локација</string>
    <string name="select_vehicle_type">Избери тип на возило</string>
    <string name="vehicle_classic">Класично (1-3 лица)</string>
    <string name="vehicle_large">Поголемо (4+ лица)</string>
    <string name="order_vehicle">Нарачај го возилото</string>

    <string name="location_icon_desc">Икона за локација</string>
    <string name="vehicle_icon_desc">Икона за возило</string>

    <string name="please_login_to_order">Ве молам најавете се за да направите нарачка.</string>
    <string name="please_select_location">Ве молам, изберете локација</string>
    <string name="please_select_vehicle_type">Ве молам, изберете тип на возило</string>
    <string name="order_successful">Нарачката е успешно испратена!</string>
    <string name="order_error">Грешка при испраќање: %1$s</string>
    <string name="minutes">минути</string>

    <string-array name="bitola_streets">
        <item>Илинденска</item>
        <item>Климент Охридски</item>
        <item>Македонска</item>
        <item>Никола Карев</item>
        <item>Даме Груев</item>
        <item>Мирче Ацев</item>
        <item>Јордан Хаџи Константинов-Џинот</item>
        <item>Питу Гули</item>
    </string-array>

    <string name="vehicle_type">Тип на возило: %1$s</string>
    <string name="address">Адреса: %1$s</string>
    <string name="arrival_time">Време на пристигнување: %1$d %2$s</string>
    <string name="cancel_order">Откажи</string>

    <string name="order_cancelled">Нарачката е откажана</string>
    <string name="order_cancel_error">Грешка при откажување на нарачката</string>
    <string name="order_load_error">Грешка при вчитување на нарачките</string>

    <string name="profile_name_placeholder">Име на корисник</string>
    <string name="profile_email_placeholder">user@email.com</string>
    <string name="profile_order_count">Вкупно нарачки: %1$d</string>
    <string name="logout_button_text">Одјави се</string>
    <string name="profile_picture_description">Слика на профил</string>

    <string name="anonymous_user">Анонимен корисник</string>
    <string name="google_user">Google корисник</string>
    <string name="unknown_email">Непознат email</string>
    <string name="email_label">Email: %1$s</string>
    <string name="profile_id_placeholder">ID: %1$s</string>
    <string name="order_count">Направени нарачки: %1$d</string>
    <string name="logout_success">Успешна одјава</string>

    <string name="menu_home">Почетна</string>
    <string name="menu_order">Нарачки</string>
    <string name="menu_history">Историја</string>
    <string name="menu_profile">Профил</string>

    <string name="header_title">TaxiGo</string>
    <string name="logo_content_description">Лого на TaxiGo</string>

    <string name="header_home">Почетна</string>
    <string name="header_order">Нарачки</string>
    <string name="header_history">Историја</string>
    <string name="header_profile">Профил</string>

    <string-array name="tips_array">
        <item>Секогаш носете сигурносен појас – вашата безбедност на прво место!</item>
        <item>Проверете дали типот на возилото што пристигнало одговара на вашата нарачка.</item>
        <item>При завршување на возењето, проверете дали сте ги земале сите работи.</item>
    </string-array>

    <string name="previous_tip">Претходен совет</string>
    <string name="next_tip">Следен совет</string>

</resources>

